// 2.55 Change Log
// Updated 29th April, 2020

//Alpha 68

You can now press C in the Tile Editor to copy a tile, then
	select a range of tiles and press F to FLOODFILL paste the copied
	tile to every position.
In the Tile Editor, electing multiple tiles, pressing C, 
	then selecting multiple tiles and pressing O will now overlay
	the copied selection tot he dest selection, triming overflow.
Mass Overlay now works properly, overlaying to each tile space, rather
	than overlaying to the first tile and copying the result of that
	overlay to the remaining spaces.
	( ZoriaRPG, 29th April, 2020 )

//Alpha 67
ghost.zh: Updated to version 2.8.15.
std.zh: v1.7050
	Updated ffrules.zh
	The printf() and sprintf() functions from std.zh
		now are in the namespace std::string. 
		They have been replaced by internal instructions.
Docs updates and fixes to ZScript_Additions.txt.
Fix signing issues and hopefully make ZScript printf() safe for Linux.
	( ZoriaRPG, 28th April, 2020 )

Fix enemies moving slowly with fixed point update.
Report duplicate keybinds explicitly.
'box_out' can now use set height/width, and scale text
	( Venrob, 28th April, 2020 )
	
Add 'stricmp()' and 'strnicmp()'
Add 'npc->Dropset', as another name for 'npc->ItemSet'
Set 'fix' QR in Modern ruleset.
Add mid-air jumps to the Roc's Feather, number based on Attributes[0]
Add flag to hover boots to make it's timer not reset until you land
New internal type 'zfix', replaces Allegro's 'fix' type.
	This gives perfect precision to 4 decimal places, unlike Allegro's,
		which had poor precision.
	This now means there will not be floating-point rounding error on
		internal values such as 'X','Y','Z','Step'.
	The QR 'Sprite Coordinates Are Float' now gives PERFECT precision
		access to ZScript for X/Y/Z of sprites.
Alpha is now 67
	( Venrob, 26th April, 2020 )
	
//Alpha 66
Make default cheat modifier keys 'SHIFT', not 'CTRL+SHIFT'
	( ZoriaRPG, 26th April, 2020 )
